--- a/css/style-generic.css
+++ b/css/style-generic.css
@@ -21,7 +21,7 @@ header{
     align-items: center;
     position: fixed;
     width: 100%;
-    height: 35px;
+    height: 5vh;
 }
 .links{
     color: white;
@@ -34,4 +34,7 @@ header{
 }
 .bio{
     color: black;
+}
+.rodape{
+    background-color: black;
 }
